--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
         <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-whatsapp" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
-        <a class="link" href="#about" data-scroll>About Me</a>
+<!--         <a class="link" href="#about" data-scroll>About Me</a> -->
         <a class="link" href="#projects" data-scroll>Servicios</a>
       </div>
   </div>
