--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
- <div class="user-details">
+<!--  <div class="user-details">
   <h1> My Expertise </h1>
   <p> {{site.user_description}} </p>
 </div>
@@ -28,3 +28,4 @@
         Vinyl XOXO lumbersexual</p>
     </div>
 </div>
+ -->
