--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,29 +1,49 @@
 <div class="user-details">
   <h1> Featured Projects </h1>
 </div>
+
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/0.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <h3> Venta de repuestos</h3>
+    <p>Realizamos venta de repuestos para cualquier tipo de maquinaria, sacamos directo de almacen. </p>
+    <a class="project-link" href="#">Consulte ahora</a>
   </div>
 </div>
+
+
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/1.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <h3> Alquiler de maquinaria </h3>
+    <p>Realizamos alquiler de maquinarias, tenemos a disposicion maquinas listas para trabajar.</p>
+    <a class="project-link" href="#">Consulte ahora</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/2.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Servicio Tecnico </h3>
+    <p>Ofrecemos mantenimiento preventivo y correctivo a maquinarias pesadas, el servicio tecnico constituye la mano de obra y todos los repuestos necesarios.</p>
+    <a class="project-link" href="#">Consulte ahora</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/3.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Importacion de Repuestos </h3>
+    <p>Importacion directa de cualquier tipo de repuestos desde Estados Unidos para maquinaria pesada de las marcas CATERPILLAR.</p>
+    <a class="project-link" href="#">Consulte ahora</a>
   </div>
 </div>
