--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,8 @@
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="mailto:info@ernestoservices.parts"><i class="icon fa fa-envelope"></i></a>
+        <img src="{{ "/src/logo111.png" | prepend: site.baseurl }}" alt="logo">
+<!--         <a aria-label="Send email" href="mailto:info@ernestoservices.parts"><i class="icon fa fa-envelope"></i></a> -->
         <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-whatsapp" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
