--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,11 @@
 <div id="particles-js">
   <div class="header">
       <h1>
-        <span class="site-title">{{site.username}}</span>
-        <span class="site-description">{{site.user_title}}</span>
-      </h1>
+<!--         <span class="site-title">{{site.username}}</span>
+        <span class="site-description">{{site.user_title}}</span> -->
+        <img src="{{ "/assets/logo111.png" | prepend: site.baseurl }}" alt="logo">
       <div class="header-icons">
-        <img src="{{ "/src/logo111.png" | prepend: site.baseurl }}" alt="logo">
-<!--         <a aria-label="Send email" href="mailto:info@ernestoservices.parts"><i class="icon fa fa-envelope"></i></a> -->
+        <a aria-label="Send email" href="mailto:info@ernestoservices.parts"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-whatsapp" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
