--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,5 +1,5 @@
 <div class="user-details">
-  <img src="{{ "/assets/web-logo.png" | prepend: site.baseurl }}" alt="logo">
+<!--   <img src="{{ "/assets/web-logo.png" | prepend: site.baseurl }}" alt="logo"> -->
   <h1> Servicios </h1>
 </div>
 
