--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,10 @@
 <div id="particles-js">
   <div class="header">
       <h1>
-        <span class="site-title">{{site.username}}</span>
+<!--         <span class="site-title">{{site.username}}</span> -->
+        <span class="site-title">
+          <div class=""> <img width="300px " alt="mountains" src="/assets/blank-logo.png " style=" max-width: 100%; "> </div>
+        </span>
         <span class="site-description">{{site.user_title}}</span>
       <div class="header-icons">
         <a aria-label="Send email" href="mailto:info@ernestoservices.parts"><i class="icon fa fa-envelope"></i></a>
